# console

./: README.md  pyproject.toml  scratch.py  test.py  weather.py
src/console/components/: base.py  ca.py  composite.py  solar.py
src/console/computation/: solar.py
src/console/data/: fake.py  iaq.py  source.py  utils.py  weather.py
