[build-system]
requires = [
  "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "console"
version = "0.1.0"
authors = [
  {name="Justin Pounders", email="jmpounders@gmail.com"},
]
description = "A personal console/dashboard."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  # "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=2.1",
  "openmeteo_sdk>=1.4.0",
  "pygame",
  "httpx",
]
